--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mysql2": "^3.3.2",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "yup": "^1.1.1"
   },
   "devDependencies": {
